--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,11 @@ cache:
   yarn: true
   directories:
     - node_modules
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
+  keep-history: true
+  on:
+    branch: master
