--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,29 @@
 language: node_js
-
 node_js:
-  - 7
-  - 6
-  - 5
-
+- 8
 script:
-  - node ./internals/scripts/generate-templates-for-linting
-  - npm run test
-  - npm run build
-
+- node ./internals/scripts/generate-templates-for-linting
+- npm run test
+- npm run build
 before_install:
-  - export CHROME_BIN=chromium-browser
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-
+- export CHROME_BIN=chromium-browser
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
 notifications:
   email:
     on_failure: change
-
-after_success: 'npm run coveralls'
-
+after_success: npm run coveralls
 cache:
   yarn: true
   directories:
-    - node_modules
-
+  - node_modules
 deploy:
-  provider: pages
+  provider: script
   skip-cleanup: true
-  github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
-  keep-history: true
+  script: bash ./deploy.sh
   on:
     branch: master
+env:
+  global:
+  - ENCRYPTION_LABEL: "b83aabfe48b2"
+  - COMMIT_AUTHOR_EMAIL: "mn2587@columbia.edu"
