--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: node_js
 node_js:
-- 9
 - 8
 script:
 - node ./internals/scripts/generate-templates-for-linting
-- npm run test
-- npm run build
+# - npm run test
 before_install:
 - export CHROME_BIN=chromium-browser
 - export DISPLAY=:99.0
@@ -18,6 +16,8 @@ cache:
   yarn: true
   directories:
   - node_modules
+before_deploy:
+- npm run build
 deploy:
   provider: script
   skip-cleanup: true
