--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ deploy:
     on:
       branch: master
   - provider: pages
+    local-dir: build
     skip-cleanup: true
     github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
     keep-history: true
